# hardy

./: CSPCL_BUNDLE_STREAM_PROMPT.md  Cargo.toml  TCPCLV4_DATAFLOW_ANALYSIS.md  TCPCLV4_INTERNALS.md  keepalive.md  mkdocs.yml  notes-for-cspcl.md  sitemap.xml
bpa-server/: Cargo.toml  example_config.toml  example_config.yaml
bpa-server/examples/cspcl-two-node/: README.md  RUNBOOK.md  node1-rust-gdb.gdb  node1.toml  node2.toml  validate_cspcl_peer_liveness.sh
bpa-server/examples/tcpcl-two-node/: README.md  node1.toml  node2.routes  node2.toml
bpa-server/src/: clas.rs  main.rs
bpa/src/cla/: mod.rs  registry.rs
bpa/src/dispatcher/: dispatch.rs  forward.rs
bpa/src/rib/: mod.rs
cspcl/: Cargo.toml
cspcl/.cargo/: config.toml
cspcl/src/: cla.rs  config.rs  control.rs  frame.rs  lib.rs  peer.rs  pending_acks.rs  registry.rs  runtime.rs  transport.rs
docs/: cspcl-peer-liveness.md
docs/user-docs/: index.md
docs/user-docs/configuration/: convergence-layers.md
docs/user-docs/how-to/: cspcl-two-node.md  riscv-cspcl-release.md
libcspcl/: cspcl.c  cspcl.h  cspcl_config.h
proto/: cla.proto
proto/src/: proto.rs
proto/src/client/: application.rs  cla.rs  service.rs
proto/src/server/: application.rs  cla.rs
proto/tests/: cla_tests.rs
scripts/cspcl-demo/: node-a.toml  node-b.toml
tcpclv4-server/: hardy-tcpclv4.toml
tcpclv4-server/certs/: server.crt  server.key
tcpclv4-server/src/: main.rs.bkp
tcpclv4/docs/: design.md
tcpclv4/src/: cla.rs  config.rs  connection.rs  lib.rs
tools/: Cargo.toml
tools/src/: app_echo.rs  app_send.rs  bp.rs  bpa_recv.rs  bpa_send.rs
