[package]
name = "cspcl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
hardy-bpv7 = { path = "../bpv7", features = ["serde"] }
hardy-bpa = { path = "../bpa" }
cspcl-bindings = { package = "cspcl", path = "/home/hugo/code/cspcl/rust-bindings/cspcl" }
spin = "0.10.0"
hardy-async = { path = "../async" }
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["macros", "time", "net", "io-util", "sync"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
serde = "1.0.228"
futures = "0.3.32"
blake3 = "1.8.2"
